--- a/latex/paper.tex
+++ b/latex/paper.tex
@@ -13,6 +13,7 @@
 \usepackage{titlesec}
 \usepackage{lineno}
 \usepackage{setspace}
+\usepackage{microtype}
 \graphicspath{{../figures/}}
 \bibliographystyle{unsrtcurrbiol}
 
