Edits from B. Durand's review

--- a/latex/paper.tex
+++ b/latex/paper.tex
@@ -122,7 +122,7 @@
     The axoneme is a microtubule-based structure that forms the core of all cilia and flagella.
     In the Drosophila male germline, nascent TZs first assemble on basal bodies
     during early G2 phase in spermatocytes \citep{riparbelli2012assembly}.
-    This is followed by anchoring of cilia to the plasma membrane,
+    This occurs concomitantly with the anchoring of cilia to the plasma membrane,
     rearrangment of microtubules within the TZ \citep{gottardo2013cilium},
     and establishment of a
     ciliary membrane that will persist through meiosis
@@ -161,7 +161,8 @@
     Drosophila male germline,
     we used transgenic flies expressing the Salmonella phosphoinositide phosphatase SigD
     under the spermatocyte-specific $\beta$2-tubulin promoter (referred to herein as \sigd{}),
-    \citep{wei2008depletion, fabian2010phosphatidylinositol}.
+    \citep{wei2008depletion}.
+    Note that \sigd{} corresponds to ``SigD-high'' in \citep{fabian2010phosphatidylinositol}.
     SigD dephosphorylates \PIP{} \textit{in vivo},
     and we previously showed that \sigd{} induces male sterility
     due in part to defects in flagellar biosynthesis \citep{wei2008depletion}.
@@ -183,6 +184,12 @@
     Ana1 length was not affected in \sigd{},
     and we did not observe a strong
     correlation between Cep290 and Ana1 lengths (Figure 1C).
+    We previously showed that the structure of basal bodies
+    from electron microscopy was normal, and that the centriolar
+    markers GFP-PACT and Sas-4 \citep{basto2006flies}
+    were normal when immunostained for
+    in controls and \sigd{}.
+    \citep{wei2008depletion}
     TZ proteins Chibby (Cby) \citep{enjolras2012drosophila} and
     Mks1 \citep{vieillard2016transition}
     showed hyperelongation in \sigd{} (Figure 1D),
@@ -241,8 +248,10 @@
     our results suggest that Sktl functions in
     regulating TZ length in the Drosophila male germline
     but not TZ assembly.
-    Cp110 is dispensable for cilium formation in Drosophila \citep{franz2013cp110}
-    and we found its localization to be unaffected in \sigd{} (Supplementary figure 1).
+    Neither inactivation nor overexpression of \textit{cp110} affects
+    cilium formation in Drosophila, and Cp110
+    and is removed from basal bodies in the earliest stages of G2 phase in the male germline
+    \citep{franz2013cp110}.
     
     %
     %   Results - 3
@@ -298,7 +307,7 @@
     \PIP{} and regulates membrane trafficking at the plasma membrane.
     To investigate whether defects in TZ hyperelongation could be explained by
     defective Exo84 function, we examined TZs in \textit{onr} mutants.
-    We found that the \textit{onr} mutant did not display hyperelongated TZs (Figure 5C),
+    We found that the \textit{onr} mutant did not display hyperelongated TZs (Figure 4C),
     suggesting that Exo84 is dispensable for TZ maturation.
 
     Due to the involvement of exocyst in membrane trafficking at the plasma membrane,
@@ -307,7 +316,7 @@
     \citep{vieillard2016transition}.
     We found that while TZs in \sigd{} and \textit{onr} cells anchored properly
     to the plasma membrane, they were unable to either establish or maintain
-    membrane connections, and were rendered cytoplasmic (Figure 5A and B) similar to
+    membrane connections, and were rendered cytoplasmic (Figure 4A and B) similar to
     \textit{dila; cby} mutants.
     Although we were not able to determine the localization of Exo84 due to the
     lack of available reagents,
@@ -340,7 +349,7 @@
     so independantly of Cby and Mks1.
 
     The majority of \PIP{} at the plasma membrane is produced by PIPKIs
-    \citep{balla2013phosphoinositides}
+    \citep{balla2013phosphoinositides, hammond2012pi4p}
     and these seem to have a conserved role at cilia.
     In this study, we showed that mutation of the PIPKI Skittles (Sktl)
     induced hyperelongated TZs, similar to SigD expression.
@@ -383,8 +392,7 @@
     and 50\% humidity.
     Stocks expressing $\beta$\textit{2t}::\textit{Styp}\textbackslash{SigD} (chromosome \textit{3}),
     $\beta$\textit{2t}::YFP-Sktl (chromosome \textit{2}) and
-    Exo70-GFP
-    were described previously \citep{wei2008depletion, fabian2010phosphatidylinositol}.
+    % placeholder - Exo70 is from where?
     $\beta$\textit{2t}::mCherry-Sktl was made as in \citep{wei2008depletion},
     and a \textit{P}-element insertion on chromosome \textit{2} was used for rescue using the low-level
     expression vector \textit{tv3} \citep{wong2005pip2}.
@@ -425,7 +433,8 @@
     Ana1-tdTomato; Cep290-GFP were
     dissected into Shields and Sang M3 medium (Sigma-Aldrich) supplemented
     with a predefined
-    concentration of Taxol and incubated overnight in a humidified sterile
+    concentration of Taxol (Sigma-Aldrich)
+    and incubated overnight in a humidified sterile
     chamber in the dark at room temperature. They were then squashed
     in PBS and imaged live.
 
@@ -476,9 +485,6 @@
     The output was converted to a vector image in Illustrator
     and colours were added for the purpose of illustration.
 
-    \section{Supplemental information}
-    Includes two figures. (Pending attachment)
-    
     \section{Acknowledgements}
     We are grateful to Brian Ciruna for insightful comments on the project,
     and B{\'e}n{\'e}dicte Durand for providing (at the time of experiments)
@@ -572,9 +578,6 @@
   \includegraphics[scale=0.9]{figure-4/figure4.png}
 \end{figure}
 \newpage
-
-\textbf{Supplemental figures}
-Cp110 localization (pending attachment).
 
 \end{document}
 
