Append new entries

--- a/latex/bibttc.bib
+++ b/latex/bibttc.bib
@@ -638,16 +638,6 @@
   publisher={American Association for the Advancement of Science}
 }
 
-@article{chang2016cep295,
-  title={CEP295 interacts with microtubules and is required for centriole elongation},
-  author={Chang, Ching-Wen and Hsu, Wen-Bin and Tsai, Jhih-Jie and Tang, Chieh-Ju C and Tang, Tang K},
-  journal={J Cell Sci},
-  volume={129},
-  number={13},
-  pages={2501--2513},
-  year={2016},
-  publisher={The Company of Biologists Ltd}
-}
 @article{fabian2012drosophila,
   title={Drosophila spermiogenesis: big things come from little packages},
   author={Fabian, Lacramioara and Brill, Julie A},
@@ -1095,4 +1085,26 @@
   pages={727--730},
   year={2012},
   publisher={American Association for the Advancement of Science}
+}
+
+@article{chang2016cep295,
+  title={CEP295 interacts with microtubules and is required for centriole elongation},
+  author={Chang, Ching-Wen and Hsu, Wen-Bin and Tsai, Jhih-Jie and Tang, Chieh-Ju C and Tang, Tang K},
+  journal={J Cell Sci},
+  volume={129},
+  number={13},
+  pages={2501--2513},
+  year={2016},
+  publisher={The Company of Biologists Ltd}
+}
+
+@article{fu2016conserved,
+  title={Conserved molecular interactions in centriole-to-centrosome conversion},
+  author={Fu, Jingyan and Lipinszki, Zoltan and Rangone, H{\'e}l{\`e}ne and Min, Mingwei and Mykura, Charlotte and Chao-Chu, Jennifer and Schneider, Sandra and Dzhindzhev, Nikola S and Gottardo, Marco and Riparbelli, Maria Giovanna and others},
+  journal={Nature Cell Biology},
+  volume={18},
+  number={1},
+  pages={87},
+  year={2016},
+  publisher={Nature Publishing Group}
 }
