Edit to address critique from B. Trimble

--- a/latex/paper.tex
+++ b/latex/paper.tex
@@ -266,7 +266,7 @@
     \citep{basiri2014migrating, fabian2012drosophila}.
     We found that
     TZs that assembled in \sigd{} cells are non-migratory despite the growth of the
-    axoneme and the cell membrane, as shown by Unc and Cep290 localization
+    axoneme (see Figure 1E) and the cell membrane, as shown by Unc and Cep290 localization
     (Figures 3A and 3B).
     We previously described ``comet-shaped'' localization of Unc-GFP in these cells,
     and we find that these hyperelongated Unc signals persist into cellular elongation
@@ -282,7 +282,9 @@
     contained puncta of Ana1, a core centriolar protein, at the tips
     of TZs marked with Cep290 (Figure 3C).
     We found that treatment of germ cells with Taxol as in \citep{riparbelli2013unique}
-    could increase the penetrance of this phenotype (Figure 3D).
+    could increase the penetrance of this phenotype from <5\% in untreated cells
+    to \textgreater25\% in cells treated with 4 $\mu$M Taxol (Figure 3D)
+    without affecting Cep290 length significantly (Figure 3E).
     Taxol treatment stabilizes microtubules and is thought to disrupt TZ maturation
     by inhibiting microtubule rearrangements \citep{riparbelli2012assembly}.
     Taxol treatment alone did not induce this phenotype in wild-type controls in our hands
@@ -323,8 +325,8 @@
     we found that GFP-tagged Exo70 localized to centrioles (Figure 4D).
     Exo70 can directly bind to \PIP{} and mediates the recruitment of
     the exocyst complex to the plasma membrane \citep{he2007exo70}.
-    Our results suggest that the exocyst may act downstream of \PIP{} to
-    enhance cilium-membrane associations, and that TZ hyperelongation and loss of
+    Our results suggest that exocyst regulates
+    cilium-membrane associations similar to \PIP{}, and that TZ hyperelongation and loss of
     membrane-cilium association are genetically separable phenotypes.
 
     \section{Discussion}
@@ -356,35 +358,85 @@
     We were able rescue TZ hyperelongation by expression of full-length Sktl to
     a large degree.
     Interestingly, some cells showed cilium-autonomous suppression of lengths.
-    The development of the Drosophila male germline occurs in syncytial ``cysts''
-    of cells which share the same cytoplasm, and
-    our results suggest that Skittles might function \textit{in situ}
+    Since the development of the Drosophila male germline occurs in syncytial ``cysts''
+    of cells which share the same cytoplasm,
+    cilium-autonomous rescue suggests that Skittles might function \textit{in situ}
     to regulate TZ maturation in these cells.
     In humans, \textit{PIPKI$\gamma$} is linked to lethal congenital contractural
     syndrome type 3 (LCCS3), which has been suggested to represent a ciliopathy.
     The recent discovery of the role of LCCS1-associated GLE1 protein in cilium
     function \citep{jao2017role} further supports this hypothesis.
-    Thus, PIPKIs might represent novel ciliopathy-associated genes
-    or genetic modifiers of disease.
+    This is further evidence that PIPKIs might represent ciliopathy-associated genes
+    or genetic modifiers of disease, as previously hypothesized
+    \citep{xu2016phosphatidylinositol}.
+
+    In this study, we report two phenotypes associated with
+    hyperelongated TZs which we postulate to be indicators of
+    TZ dysfunction.
+    Firstly, we show that hyperelongated TZs are unable to
+    detach from the basal bodies at the onset of axoneme elongation
+    in spermatids, unlike normal cells \citep{basiri2014migrating, fabian2012drosophila}.
+    However, axonemes can assemble despite the lack of a functional
+    TZ or membrane association in \sigd{} cells.
+    As we previously reported, these axonemes have frequently aberrant
+    ultrastructure \citep{wei2008depletion}.
+    This is similar to \textit{cep290} \citep{basiri2014migrating}
+    and \textit{dila}; \textit{cby} \citep{vieillard2016transition}
+    mutants,
+    both of which can assemble spermatid axonemes despite lacking
+    functional TZs.
+    We also report a novel phenotype of TZ-distal Ana1 localization
+    in \sigd{} cells.
+    In flies, Ana1 is important for centriole elongation
+    \citep{saurya2016drosophila}.
+    The human ortholog of Ana1 called CEP295 regulates
+    centriole elongation by building the distal centriole and
+    enhancing post-translational modification of the centriolar
+    microtubules \citep{chang2016cep295}.
+    The observation that Drosophila \textit{cep290} mutants,
+    which lack a functional TZ diffusion barrier
+    \citep{basiri2014migrating},
+    contain hyperelongated centrioles suggests that the
+    TZ normally suppresses centriole length.
+    Our results of Ana1 being present at the tips of hyperelongated TZs
+    without an increase in centriole length suggest that \sigd{} expression
+    does not entirely disrupt the TZ diffusion barrier, but certain aspects of it,
+    such as the inability to restrict C-tubules and Ana1.
+    We found that
+    Asterless (Asl), a peri-centriolar protein
+    \citep{blachon2008drosophila}
+    important for centrosome formation and centriole duplication, did not
+    exhibit this TZ-distal localization.
+    This may be due to many reasons, such as the different dynamics of Ana1 and Asl
+    loading onto centrioles \citep{fu2016conserved, saurya2016drosophila} and the
+    more peripheral nature of Asl within the centriole \citep{blachon2008drosophila}
     
-    The gene \textit{EXOC8}, encoding the human Exo84, has also
-    been linked to Joubert syndrome, a ciliopathy
-    \citep{dixon2012exome}.
     Members of the exocyst complex, such as Sec10 and Sec6, have been shown
     to be important for cilium formation in cultured cell lines and zebrafish
-    \citep{zuo2009exocyst, lobo2017exocyst, seixas2016arl13b}.
-    The exocyst is known to bind to \PIP{}
-    \citep{he2007exo70, zhang2008membrane}, and we previously showed that
+    \citep{zuo2009exocyst, lobo2017exocyst, seixas2016arl13b},
+    but their precise roles in ciliogenesis are not well-understood.
+    The subunits Sec3 and Exo70 regulate exocyst targeting to the plasma
+    membrane through a direct interaction with \PIP{}
+    \citep{he2007exo70, zhang2008membrane}.
+    We previously showed that
     the \textit{onr} allele of Drosophila \textit{Exo84} phenocopied
-    male germline defects observed in \sigd{} \citep{fabian2010phosphatidylinositol}.
+    defects in cell polarity and elongation observed in \sigd{}
+    \citep{fabian2010phosphatidylinositol}.
     In this paper, we show that the \textit{onr} allele of the Drosophila Exo84
-    phenocopies the loss of cilium-membrane contacts in \sigd{},
+    phenocopies the loss of cilium-membrane contacts in \sigd{} similar to
+    \textit{dila; cby} mutants \citep{vieillard2016transition},
     but not TZ hyperelongation.
-    Proper TZ function is required for membrane tethering, as evidenced by
-    \textit{dila; cby} mutants, which contain abnormal TZs
-    and show similar cytoplasmic cilia similar as \sigd{} \citep{vieillard2016transition}.
-    Our results suggest that the exocyst is required for this process,
-    possibly downstream of \PIP{}.
+    Thus, TZ dysfunction is not a prerequisite for lack of
+    cilium-plasma membrane association in male germ cells,
+    and Exo84 uniquely regulates the latter process.
+    This result is supported by the Drosophila \textit{cep290} mutant,
+    which lacks a functional TZ but retains cilium-plasma membrane
+    association \cite{basiri2014migrating}.
+    Notably, \textit{EXOC8}, which encodes the human Exo84, has
+    been linked to the ciliopathy Joubert syndrome
+    \citep{dixon2012exome},
+    and a similar process might underlie defects in humans with
+    mutations in \textit{EXOC8}.
 
     \section{Methods}
     \subsection{Transgenic flies}
@@ -530,6 +582,7 @@
     \textbf{Figure 3. Hyperelongated transition zones display functional defects.}
     \begin{enumerate}[label={(\Alph*)}, nolistsep]
     \item GFP-tagged Unc is unable to detach from the basal body and migrate in spermatids expressing \sigd{}.
+      Cell elongation in spermatids is concomitant with elongation of the mitochondrial derivative (dark organelles in the phase contrast images).
     \item Cep290 is unable to detach and migrate from the basal body at the onset of axoneme assembly in \sigd{} spermatids.
     \item Structured illumination micrographs of \sigd{} cells show TZ-distal puncta of the centriolar protein Ana1.
     \item Treatment of \sigd{} cells with the microtubule stabilizing drug Taxol increases the penetrance of TZ-distal Ana1.
