Edits to address J. Brill's critique

--- a/coverletter/main.tex
+++ b/coverletter/main.tex
@@ -7,7 +7,7 @@
 
 \newcommand{\PIP}{PIP\textsubscript{2}}
 
-\signature{Alind Gupta}
+\signature{Julie Brill}
 \date{\small \today}
 \begin{document}
 
@@ -17,17 +17,19 @@
 \opening{Dear Editors,}
 
 We are submitting our manuscript titled
-``Phosphatidylinositol 4,5-bisphosphate is essential for
+``Phosphatidylinositol 4,5-bisphosphate regulates
 cilium transition zone maturation in \textit{Drosophila melanogaster}''
 to be considered for publication in \textit{Current Biology}.
 In this paper, we demonstrate a novel role for the membrane lipid
 phosphatidylinositol 4,5-bisphosphate, or \PIP{},
 in the development of the cilium transition zone using
-\textit{Drosophila melanogaster} as a model.
+the male germline of \textit{Drosophila melanogaster} as a model.
 
-The cilium transition zone forms a diffusion barrier that controls
-the transport of cargo entering and exiting the cilium.
-As a result, it is essential to the assembly of the cilium
+The transition zone forms a diffusion barrier
+at the base of the cilium, thereby controlling
+the transport of cargo entering and exiting this organelle.
+As a result, the proper formation and maturation of the transition zone
+is essential for the assembly of the cilium
 and its function as a sensory organelle.
 
 In this paper, we present the following key findings:
@@ -37,42 +39,42 @@ In this paper, we present the following key findings:
 \item We show that the type I phosphatidylinositol phosphate kinase
   Skittles regulates transition zone length.
 \item We provide evidence that hyperelongated transition zones are
-  functionally defective in their ability to form a competent diffusion barrier
-  and represent the outcome of an aberrant maturation process.
-\item We show that the \textit{onion rings} allele of the Drosophila Exo84,
+  functionally defective.
+\item We show that the \textit{onion rings} allele of Drosophila Exo84,
   a component of the exocyst complex, can decouple transition zone length
-  with the loss of plasma membrane-cilium tethering observed in cells
-  with reduced \PIP{}.
+  from the loss of plasma membrane-cilium tethering observed in cells
+  with reduced levels of \PIP{}.
 \end{enumerate}
 
 This article is of broad interest for several reasons.
-This is, to our knowledge, the first example of a positive role for the lipid
-\PIP{} in cilium assembly through transition zone maturation,
-particularly in an animal model.
-This is in contrast to the current model
-of the PIP code of cilia where \PIP{} is a disruptor of ciliary signalling.
-Second, we describe an extrinsic signal for transition zone
-development, which is going to be missed by proteomic approaches.
-Third, we add to the current understanding of the poorly understood
-process by which the transition zone matures into a functional form.
-This may be important for our understanding of intermediate phenotypes
-and novel modifiers of disease.
+First, we show that the poorly understood process of
+transition zone maturation, by which a nascent transition zone
+matures into a fully functional one,
+is regulated by the lipid \PIP{}, which is known to be enriched
+at the base of cilia from multiple studies.
+Second, we show that the Drosophila type I phosphatidylinositol
+phosphate kinase Skittles regulates transition zone
+maturation, and that it does so \textit{in situ},
+providing further evidence that these enzymes may be genetic
+modifiers of diseases of cilia.
+Third, we show that the exocyst, which has been shown to be important for
+cilium formation in multiple studies, regulates cilium maintenance
+by enabling plasma membrane-cilium attachment but not transition zone maturation.
 
 Here are the names of six possible reviewers:
 \begin{enumerate}
+  \item B{\'e}n{\'e}dicte Durand, Université Claude Bernard Lyon-1 (\url{benedicte.durand@univ-lyon1.fr})
+  \item Daniel Eberl, University of Iowa (\url{daniel-eberl@uiowa.edu})
+  \item Yukiko Yamashita, University of Michigan (\url{yukikomy@umich.edu})
+  \item Timothy Megraw, Florida State University (\url{timothy.megraw@med.fsu.edu})
   \item Tomer Avidor-Reiss, University of Toledo (\url{tomer.avidorreiss@utoledo.edu})
-  \item
-  \item
-  \item
-  \item
+    \item Andrew Jarman, University of Edinburgh (\url{andrew.jarman@ed.ac.uk})
 \end{enumerate}
 
-
-We look forward to you favourable consideration of our manuscript.
+We look forward to your favourable consideration of our manuscript.
 
 \closing{Sincerely,}
 
 
 \end{letter}
 \end{document}
-
